P2Pmsgcore/native/P2Pmsgcore_c.h

// ── Opaque handles ────────────────────────────────────────────────────────────
typedef void* P2PAddrHandle;
typedef void* P2PeerMsgHandle;
typedef void* P2PeerConWsaHandle;
typedef void* P2PeerHubHandle;
// ── Lifecycle (P2Pmsg environment) ────────────────────────────────────────────
// p2pmsgcore_startup MUST be called once per process BEFORE any P2PeerHub
// operation (it initialises the shared hub/pump critical sections and the hub
// manager table); p2pmsgcore_cleanup once at shutdown. This mirrors the native
// StartupP2Pmsg/CleanupP2Pmsg contract every C++ consumer already follows.
// P2Paddr and P2PeerMsg (pure object model) do NOT require startup.
// Returns 1 on success, 0 on failure (incl. "already started").
P2PC_API int            p2pmsgcore_startup    (unsigned int nMaxHubs);
P2PC_API void           p2pmsgcore_cleanup    (void);
// ── P2Paddr ───────────────────────────────────────────────────────────────────
P2PC_API P2PAddrHandle  p2paddr_create        (void);
P2PC_API P2PAddrHandle  p2paddr_create_str    (const wchar_t* strAddr);
P2PC_API void           p2paddr_destroy       (P2PAddrHandle h);
P2PC_API const wchar_t* p2paddr_c_name        (P2PAddrHandle h);
P2PC_API int            p2paddr_is_null       (P2PAddrHandle h);