P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java

// Generated by jextract

package com.p2pmsgcore.native_;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class P2Pmsgcore_c extends P2Pmsgcore_c$shared {

    P2Pmsgcore_c() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.libraryLookup(System.mapLibraryName("P2Pmsgcore"), LIBRARY_ARENA)
            .or(SymbolLookup.loaderLookup())
            .or(Linker.nativeLinker().defaultLookup());

    /**
     * {@snippet lang=c :
     * typedef void *P2PAddrHandle
     * }
     */
    public static final AddressLayout P2PAddrHandle = P2Pmsgcore_c.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef void *P2PeerMsgHandle
     * }
     */
    public static final AddressLayout P2PeerMsgHandle = P2Pmsgcore_c.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef void *P2PeerConWsaHandle
     * }
     */
    public static final AddressLayout P2PeerConWsaHandle = P2Pmsgcore_c.C_POINTER;
    /**
     * {@snippet lang=c :
     * typedef void *P2PeerHubHandle
     * }
     */
    public static final AddressLayout P2PeerHubHandle = P2Pmsgcore_c.C_POINTER;

    private static class p2pmsgcore_startup {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2pmsgcore_startup").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2pmsgcore_startup(unsigned int nMaxHubs)
     * }
     */
    public static FunctionDescriptor p2pmsgcore_startup$descriptor() {
        return p2pmsgcore_startup.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2pmsgcore_startup(unsigned int nMaxHubs)
     * }
     */
    public static MethodHandle p2pmsgcore_startup$handle() {
        return p2pmsgcore_startup.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2pmsgcore_startup(unsigned int nMaxHubs)
     * }
     */
    public static MemorySegment p2pmsgcore_startup$address() {
        return p2pmsgcore_startup.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2pmsgcore_startup(unsigned int nMaxHubs)
     * }
     */
    public static int p2pmsgcore_startup(int nMaxHubs) {
        var mh$ = p2pmsgcore_startup.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2pmsgcore_startup", nMaxHubs);
            }
            return (int)mh$.invokeExact(nMaxHubs);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2pmsgcore_cleanup {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2pmsgcore_cleanup").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2pmsgcore_cleanup()
     * }
     */
    public static FunctionDescriptor p2pmsgcore_cleanup$descriptor() {
        return p2pmsgcore_cleanup.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2pmsgcore_cleanup()
     * }
     */
    public static MethodHandle p2pmsgcore_cleanup$handle() {
        return p2pmsgcore_cleanup.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2pmsgcore_cleanup()
     * }
     */
    public static MemorySegment p2pmsgcore_cleanup$address() {
        return p2pmsgcore_cleanup.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2pmsgcore_cleanup()
     * }
     */
    public static void p2pmsgcore_cleanup() {
        var mh$ = p2pmsgcore_cleanup.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2pmsgcore_cleanup");
            }
            mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create()
     * }
     */
    public static FunctionDescriptor p2paddr_create$descriptor() {
        return p2paddr_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create()
     * }
     */
    public static MethodHandle p2paddr_create$handle() {
        return p2paddr_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create()
     * }
     */
    public static MemorySegment p2paddr_create$address() {
        return p2paddr_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create()
     * }
     */
    public static MemorySegment p2paddr_create() {
        var mh$ = p2paddr_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_create");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_create_str {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_create_str").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create_str(const wchar_t *strAddr)
     * }
     */
    public static FunctionDescriptor p2paddr_create_str$descriptor() {
        return p2paddr_create_str.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create_str(const wchar_t *strAddr)
     * }
     */
    public static MethodHandle p2paddr_create_str$handle() {
        return p2paddr_create_str.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create_str(const wchar_t *strAddr)
     * }
     */
    public static MemorySegment p2paddr_create_str$address() {
        return p2paddr_create_str.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PAddrHandle p2paddr_create_str(const wchar_t *strAddr)
     * }
     */
    public static MemorySegment p2paddr_create_str(MemorySegment strAddr) {
        var mh$ = p2paddr_create_str.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_create_str", strAddr);
            }
            return (MemorySegment)mh$.invokeExact(strAddr);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_destroy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2paddr_destroy(P2PAddrHandle h)
     * }
     */
    public static FunctionDescriptor p2paddr_destroy$descriptor() {
        return p2paddr_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2paddr_destroy(P2PAddrHandle h)
     * }
     */
    public static MethodHandle p2paddr_destroy$handle() {
        return p2paddr_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2paddr_destroy(P2PAddrHandle h)
     * }
     */
    public static MemorySegment p2paddr_destroy$address() {
        return p2paddr_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void p2paddr_destroy(P2PAddrHandle h)
     * }
     */
    public static void p2paddr_destroy(MemorySegment h) {
        var mh$ = p2paddr_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_destroy", h);
            }
            mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_c_name {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_c_name").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const wchar_t *p2paddr_c_name(P2PAddrHandle h)
     * }
     */
    public static FunctionDescriptor p2paddr_c_name$descriptor() {
        return p2paddr_c_name.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const wchar_t *p2paddr_c_name(P2PAddrHandle h)
     * }
     */
    public static MethodHandle p2paddr_c_name$handle() {
        return p2paddr_c_name.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const wchar_t *p2paddr_c_name(P2PAddrHandle h)
     * }
     */
    public static MemorySegment p2paddr_c_name$address() {
        return p2paddr_c_name.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const wchar_t *p2paddr_c_name(P2PAddrHandle h)
     * }
     */
    public static MemorySegment p2paddr_c_name(MemorySegment h) {
        var mh$ = p2paddr_c_name.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2paddr_c_name", h);
            }
            return (MemorySegment)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2paddr_is_null {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2paddr_is_null").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2paddr_is_null(P2PAddrHandle h)
     * }
     */
    public static FunctionDescriptor p2paddr_is_null$descriptor() {
        return p2paddr_is_null.DESC;
    }
